--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Github page testi</title>
+  <title>Github page test</title>
 
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
-  <h1>Github pages testi</h1>
+  <h1>Github page test</h1>
 </body>
 
 </html>
